Added ArrayInput component

--- a/src/routes/app.css
+++ b/src/routes/app.css
@@ -385,3 +385,9 @@ article footer p {
 .hide {
     display: none !important;
 }
+
+.ellipsis {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
